# EbU-examples

./: .gitignore  README.md  cabal.project  embedding-by-unembedding-examples.cabal  stack.yaml
ebu-examples/: LICENSE  README.md
ebu-examples/src/Unembedding/Examples/: AppLens.hs  ILC.hs  STLC.hs
src/Unembedding/Examples/: CTS.hs  ELens.hs  Forall.hs  ILC.hs  STLC.hs
