cabal-version:      2.4
name:               embedding-by-unembedding-examples
version:            0.2.0.0

license:            BSD-3-Clause
author:             Kazutaka Matsuda, Samantha Frohlich
maintainer:         kztk@tohoku.ac.jp

common deps
    build-depends:
        base ^>= 4.12 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17,
        mtl ^>= 2.2,
        containers ^>= 0.6,
        embedding-by-unembedding 

    default-language: Haskell2010
    ghc-options:
                 -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances
    if impl(ghc >= 8.2)
      ghc-options:       -fhide-source-paths
    if impl(ghc >= 8.4)
      ghc-options:       -Wmissing-export-lists
                         -Wpartial-fields
    if impl(ghc >= 8.8)
      ghc-options:       -Wmissing-deriving-strategies
                         -fwrite-ide-info
                         -hiedir=.hie
    if impl(ghc >= 8.10)
      ghc-options:       -Wunused-packages

library
    import: deps
    exposed-modules:
        Unembedding.Examples.AppLens
        Unembedding.Examples.CTS
        Unembedding.Examples.ELens
        Unembedding.Examples.ILC
        Unembedding.Examples.STLC

    hs-source-dirs:   src
    default-language: Haskell2010